# Xilriws

./: .gitignore  Dockerfile  DockerfileCion  app.py  pyproject.toml
xilriws/: constants.py  proxy.py  ptc_join.py
xilriws-proxy/: background.js
xilriws-targetfp/: canvas.js  contentScript.js  funcToString.js  general.js  inject.js  manifest.json  screen.js  webgl.js
xilriws/browser/: browser.py  browser_auth.py  browser_join.py
xilriws/mode/: auth_mode.py  cion_mode.py
