[tool.poetry]
name = "xilriws"
version = "0.1.0"
description = ""
authors = ["Malte <42342921+ccev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
litestar = {extras = ["standard"], version = "^2.7.0"}
httpx = "^0.27.0"
loguru = "^0.7.2"
websockets = "^14.0"
curl-cffi = "0.6.3"
zendriver = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

